need a little more formatting for players
